--- a/.env
+++ b/.env
@@ -25,5 +25,6 @@ APP_SECRET=60e251a321e34186d98cead8b14cf013
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="sqlite:///%kernel.project_dir%/database/mybase.db"
 ###< doctrine/doctrine-bundle ###
